@@ -49,9 +49,9 @@ phase1_int_match_max=8            # Maximum integer or 1/integer to test for pha
 phase1_int_match_filter=yes       # Filter phase1_int_match > 4 to only allow multiples of 2 or 3
 phase1_two_term_test_min=1.75     # Minimum value of "reasonable range" for two_term_test.  Used to quickly abort phase 1 if out of range.  If phase 1 solves then two_term_test is evaluated for close integer match
 phase1_two_term_test_max=2.25     # Maximum value of "reasonable range" for two_term_test. Used to quickly abort phase 1 if out of range.  If phase 1 solves then two_term_test is evaluated for close integer match
-phase1_unsolvable_checkpoint=250000 # In (1-smr) mode, number of phase 1 inner loop samples (not to be confused with random input samples) to periodically check if phase 1 has made any progress. Lower
-                                    # numbers find unsolvable formulas faster but risk missing slow to solve formulas
-phase1_mc_samples_limit=100000000 # In (1-smr) mode, maximum phase 1 inner loop samples. Safety in case other unsolvable checks fail
+phase1_unsolvable_checkpoint=1000000 # In (1-smr) mode, number of phase 1 inner loop samples (not to be confused with random input samples) to periodically check if phase 1 has made any progress. Lower
+                                     # numbers find unsolvable formulas faster but risk missing slow to solve formulas
+phase1_mc_samples_limit=10000000000  # In (1-smr) mode, maximum phase 1 inner loop samples. Safety in case other unsolvable checks fail
 #
 # Phase 2 processing options
 #
