@@ -43,15 +43,15 @@ exp_neg_enable=yes                # Enable negative exponents
 # Phase 1 processing options
 #
 phase1_run_continuous=yes         # yes = Run continuously, no = run only once
-phase1_random_samples_enable=yes  # yes = Use random samples from within experimental uncertainty for all variables in phase1, no = use center reference values
+phase1_random_samples_enable=no   # yes = Use random samples from within experimental uncertainty for all variables in phase1, no = use center reference values
 phase1_filter=4                   # phase 1 matches must be within 10^(-phase1_filter) of a phase1_int_match or 1/phase1_int_match to pass to phase 2.  Suppored values are 3,4,5,6
 phase1_int_match_max=8            # Maximum integer or 1/integer to test for phase 1 matches
 phase1_int_match_filter=yes       # Filter phase1_int_match > 4 to only allow multiples of 2 or 3
 phase1_two_term_test_min=0.0      # Minimum value of "reasonable range" for two_term_test.  Used to quickly abort phase 1 if out of range.  If phase 1 solves then two_term_test is evaluated for close integer match
 phase1_two_term_test_max=1.0E99   # Maximum value of "reasonable range" for two_term_test. Used to quickly abort phase 1 if out of range.  If phase 1 solves then two_term_test is evaluated for close integer match
-phase1_unsolvable_checkpoint=250000 # In (1-smr) mode, number of phase 1 inner loop samples (not to be confused with random input samples) to periodically check if phase 1 has made any progress. Lower
-                                    # numbers find unsolvable formulas faster but risk missing slow to solve formulas
-phase1_mc_samples_limit=100000000 # In (1-smr) mode, maximum phase 1 inner loop samples. Safety in case other unsolvable checks fail
+phase1_unsolvable_checkpoint=1000000 # In (1-smr) mode, number of phase 1 inner loop samples (not to be confused with random input samples) to periodically check if phase 1 has made any progress. Lower
+                                     # numbers find unsolvable formulas faster but risk missing slow to solve formulas
+phase1_mc_samples_limit=10000000000  # In (1-smr) mode, maximum phase 1 inner loop samples. Safety in case other unsolvable checks fail
 #
 # Phase 2 processing options
 #
